fix horizontal centering

--- a/css/style.css
+++ b/css/style.css
@@ -44,13 +44,13 @@ html {
 }
 
 .title {
-    color: #FFF;
-    font-size: 7em;
-    text-align: center;
-    text-shadow: black 0.1em 0.1em 0.2em;
-    font-family: Impact, Charcoal, sans-serif;
-    font-size: 5em;
-    letter-spacing: .1em;
+  color: #FFF;
+  font-size: 7em;
+  text-align: center;
+  text-shadow: black 0.1em 0.1em 0.2em;
+  font-family: Impact, Charcoal, sans-serif;
+  font-size: 5em;
+  letter-spacing: .1em;
 }
 
 @media all and (max-width: 750px){
@@ -71,13 +71,13 @@ html {
 }
 
 .button:hover{
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transform:translateZ(0) scale(1.05);
-    -moz-transform:scale(1.05);
-    -ms-transform:scale(1.05);
-    -o-transform:translatZ(0) scale(1.05);
-    transform:translatZ(0) scale(1.05);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transform:translateZ(0) scale(1.05);
+  -moz-transform:scale(1.05);
+  -ms-transform:scale(1.05);
+  -o-transform:translatZ(0) scale(1.05);
+  transform:translatZ(0) scale(1.05);
 }
 
 
@@ -234,4 +234,10 @@ p{
   -moz-animation-delay: 0;
   -o-animation-delay: 0;
   animation-delay: 0;
+}
+
+.main-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
